# u-lang

./: .gitignore  Cargo.toml  README-fr.md  README.md  index.html
assets/: default.json  deutsch.json  english1.json  english2.json
src/: editor.rs  lib.rs  main.rs  settings.rs  style.rs  word.rs
src/grammar/: english.rs  french.rs  german.rs  mod.rs  word.rs
