[package]
name = "u-lang"
version = "0.1.1"
edition = "2021"

[dependencies]
rand = "0.8.5"
iced = { version = "0.12", features = ["tokio", "advanced"] }
iced_aw = {version = "0.8", default-features=false, features = ["menu", "quad"]}
tokio = { version = "1.36", features = ["rt"] }
rfd = "0.14"
json = "0.12.4"
async-std = "1.12"
grammar = { git = "https://github.com/milvusAquila/grammar" }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
iced_web = "0.4"
web-sys = { version = "0.3", features = [ "Document", "Window" ]}
iced = { version = "0.12", features = ["image", "debug", "webgl"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.36", features = ["fs"] }
