[package]
name = "u-lang"
version = "0.1.4"
edition = "2021"

[dependencies]
rand = "0.8.5"
iced = { version = "0.13.1", features = ["tokio", "advanced"] }
iced_aw = {version = "0.11.0", default-features = false, features = ["grid", "menu", "quad"]}
tokio = { version = "1.43.0", features = ["rt"] }
rfd = "0.15.2"
json = "0.12.4"
async-std = "1.13.0"
grammar = { git = "https://github.com/milvusAquila/grammar" }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
iced_web = "0.4"
web-sys = { version = "0.3", features = [ "Document", "Window" ]}
iced = { version = "0.13", features = ["image", "debug", "webgl"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.43.0", features = ["fs"] }
